--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <body>
     <div class="container">
        <div class="serie">
-        <h1>RIVERDALE</h1>
-        <img src="imagens/riverdale.jpg" alt="Riverdale" width="300px">
-        <p>Riverdale é uma série que mistura drama adolescente, mistério e suspense. Ambientada na pequena cidade de Riverdale, a trama começa com o misterioso assassinato de Jason Blossom...</p>     
-        <a href="riverdale.html" class="leia">Leia Mais</a>
+        <h1>TREM BALA</h1>
+        <img src="imagens/download (3).jpg" alt="trem-bala" width="300px">
+        <p>No veloz trem-bala que liga Tóquio a Quioto, cinco assassinos profissionais embarcam em missões aparentemente diferentes — mas logo percebem que seus objetivos estão interligados. Entre eles está Joaninha (Ladybug), um azarado matador tentando levar uma vida menos violenta,</p>     
+        <a href="trem.html" class="leia">Leia Mais</a>
        </div>
         <div class="serie1">
-            <h1>ARCANE</h1>
-            <img src="imagens/arcane.jpg" alt="arcane" width="300px">
-            <p>Inspirada no universo do jogo League of Legends, Arcane mergulha nas histórias de origem de alguns dos personagens mais icônicos da franquia. A trama acompanha as irmãs Vi e Jinx, que cresceram nas duras ruas de Zaun...</p>
-            <a href="arcane.html" class="leia1">Leia Mais</a>
+            <h1>THE OFFICE</h1>
+            <img src="imagens/download.jpg" alt="the-office" width="300px">
+            <p>Ambientada no escritório da Dunder Mifflin, uma distribuidora de papel na cidade de Scranton, Pensilvânia, The Office acompanha o cotidiano dos funcionários...</p>
+            <a href="office.html" class="leia1">Leia Mais</a>
         </div>
         <div class="serie2">
-            <h2>HOW I MET YOUR MOTHER</h2>
-            <img src="imagens/himym.jpg" alt="HIMYM" width="300px">
-            <p>Contada do ponto de vista de Ted Mosby no futuro, a série acompanha a jornada dele para encontrar o grande amor de sua vida. Narrando para os filhos cada detalhe dessa trajetória...</p>
-            <a href="himym.html" class="leia2">Leia Mais</a>
+            <h2>O ESPETACULAR HOMEM ARANHA</h2>
+            <img src="imagens/download (6).jpg" alt="aranha" width="300px">
+            <p>Após ser abandonado pelos pais quando criança, Peter Parker cresce com seus tios em Nova York, lidando com as dúvidas sobre seu passado...</p>
+            <a href="aranha.html" class="leia2">Leia Mais</a>
         </div>
         <div class="serie3">
-            <h1>SEMPRE FUI EU</h1>
-            <img src="imagens/siemprefuiyo1.jpg" alt="siempre-fui-yo" width="300px">
-            <p>Produção latino-americana que mistura mistério e romance, Sempre Fui Eu segue Lupe, uma jovem mexicana que viaja para Cartagena, na Colômbia, após receber a notícia da morte repentina de seu pai, um famoso cantor local... </p>
-            <a href="siempre.html" class="leia3">Leia Mais</a>
+            <h1>CONTA COMIGO</h1>
+            <img src="imagens/download (9).jpg" alt="conta-comigo" width="300px">
+            <p>Na pequena cidade de Castle Rock, Oregon, durante o verão de 1959, quatro amigos de 12 anos — Gordie, Chris, Teddy e Vern — embarcam em uma jornada pela floresta...</p>
+            <a href="conta.html" class="leia3">Leia Mais</a>
         </div>
         <div class="serie4">
-            <h1>GLEE</h1>
-            <img src="imagens/glee.jpg" alt="glee">
-            <p> Na escola William McKinley, um grupo improvável de estudantes se reúne no coral escolar, o Glee Club, liderado pelo professor Will Schuester. Cada integrante carrega seus próprios dramas, inseguranças e sonhos... </p>
-            <a href="glee.html" class="leia4">Leia Mais</a>
+            <h2>SETE HOMENS E UM DESTINO</h2>
+            <img src="imagens/download (4).jpg" alt="7-homens">
+            <p> Quando a pacata cidade de Rose Creek é ameaçada pelo tirano empresário Bartholomew Bogue, os moradores decidem lutar por sua liberdade. Para isso, contratam sete forasteiros — pistoleiros, caçadores de recompensas e fora-da-lei — liderados... </p>
+            <a href="7homens.html" class="leia4">Leia Mais</a>
         </div>
 
        
